사용 목록 상세 내용 수정
