# app/Http/Controllers/Api/PlayController.php
@@ -27,9 +27,9 @@ class PlayController extends Controller
     /**
      * @OA\Get (
      *     path="/api/test",
-     *     tags={"API 테스트"},
-     *     summary="API 테스트",
-     *     description="API 테스트",
+     *     tags={"API Get 테스트"},
+     *     summary="API Get 테스트",
+     *     description="API Get 테스트",
      *     @OA\Parameter(
      *         description="요청값",
      *         in="query",
@@ -58,6 +58,58 @@ class PlayController extends Controller
      * )
      */
     public function test(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            "param" => "required",
+            "params" => "required",
+        ]);
+
+        if ($validator->fails()) {
+            return view("errors.error", ["errors" => $validator->errors()]);
+        }
+
+        $param = $request->param;
+        $params = $request->params;
+
+        return response()->json([
+            "result" => "success",
+            "result_data" => ["param" => $param, "params" => $params],
+        ]);
+    }
+
+    /**
+     * @OA\Post (
+     *     path="/api/testPost",
+     *     tags={"API Post 테스트"},
+     *     summary="API Post 테스트",
+     *     description="API Post 테스트",
+     *     @OA\Parameter(
+     *         description="요청값",
+     *         in="query",
+     *         name="param",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="string", value="1", summary="paramter"),
+     *     ),
+     *     @OA\Parameter(
+     *         description="요청값들",
+     *         in="query",
+     *         name="params",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="string", value="[1,2,3]", summary="paramters"),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="결과값",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="result", type="string", example="success")
+     *         )
+     *     )
+     * )
+     */
+
+    public function testPost(Request $request)
     {
         $validator = Validator::make($request->all(), [
             "param" => "required",
@@ -125,20 +177,21 @@ class PlayController extends Controller
     {
         $selectData = DB::table("plays as p")
             ->select(
-                "m.id",
-                "m.ids",
-                "m.name",
-                "m.sex",
-                "m.birth_date",
-                "p.seq_no",
-                "p.start_date",
-                "p.end_date",
-                "p.total_time",
-                "p.created_at"
+                "p.id as p_id",
+                "m.id as m_id",
+                "m.ids as m_ids",
+                "m.name as m_name",
+                "m.sex as m_sex",
+                "m.birth_date as m_birth_date",
+                "p.seq_no as p_seq_no",
+                "p.start_date as p_start_date",
+                "p.end_date as p_end_date",
+                "p.total_time as p_total_time",
+                "p.created_at as p_created_at"
             )
             ->join("members as m", "m.id", "=", "p.member_id")
-            ->orderBy("id", "asc")
-            ->orderBy("seq_no", "asc")
+            ->orderBy("m_id", "asc")
+            ->orderBy("p_seq_no", "asc")
             ->get()
             ->toArray();
 
@@ -148,30 +201,27 @@ class PlayController extends Controller
     public function playDetail(Request $request)
     {
         $validator = Validator::make($request->all(), [
-            "id" => "required",
-            "play_seq_no" => "required",
+            "play_id" => "required",
         ]);
 
         if ($validator->fails()) {
             return view("errors.error", ["errors" => $validator->errors()]);
         }
 
-        $memberId = $request->id;
-        $playSeqNo = $request->play_seq_no;
+        $playId = $request->play_id;
 
-        $selectData = DB::table("play_details as pd")
+        $selectData = DB::table("play_details")
             ->select(
-                "pd.seq_no",
-                "pd.ground",
-                "pd.step",
-                "pd.actual_play_time",
-                "pd.start_date",
-                "pd.end_date",
-                "pd.false_count",
-                "pd.created_at"
+                "id",
+                "ground",
+                "step",
+                "actual_play_time",
+                "start_date",
+                "end_date",
+                "false_count",
+                "created_at"
             )
-            ->where("pd.member_id", "=", $memberId)
-            ->where("pd.seq_no", "=", $playSeqNo)
+            ->where("play_id", "=", $playId)
             ->orderBy("ground", "asc")
             ->orderBy("step", "asc")
             ->get()
@@ -184,19 +234,104 @@ class PlayController extends Controller
     {
         $validator = Validator::make($request->all(), [
             "id" => "required",
-            "play_seq_no" => "required",
+            "ground" => "required",
+            "step" => "required",
+            "start_date" => "required",
+            "end_date" => "required",
+            "false_count" => "required",
         ]);
 
         if ($validator->fails()) {
             return view("errors.error", ["errors" => $validator->errors()]);
         }
 
+        $id = $request->id;
         $ground = $request->ground;
         $step = $request->step;
-        $falseCount = $request->falseCount;
-        $startDate = $request->startDate;
-        $endDate = $request->endDate;
+        $falseCount = $request->false_count;
+        $startDate = $request->start_date;
+        $endDate = $request->end_date;
+        $actualPlayTime = $request->actual_play_time;
 
-        return response()->json([]);
+        $selectData = DB::table("play_details")
+            ->where("id", "=", $id)
+            ->first();
+
+        DB::beginTransaction();
+        try {
+            DB::table("play_details")
+                ->where("id", "=", $id)
+                ->update([
+                    "ground" => $ground,
+                    "step" => $step,
+                    "false_count" => $falseCount,
+                    "start_date" => $startDate,
+                    "end_date" => $endDate,
+                    "actual_play_time" => $actualPlayTime,
+                ]);
+            DB::commit();
+
+            Log::info(
+                "[PlayDetail][Edit] id: {$id}, ground:{$selectData->ground}, step: {$selectData->step}, false_count: {$selectData->false_count}, start_date: {$selectData->start_date}, end_date: {$selectData->end_date}"
+            );
+        } catch (Exception $e) {
+            DB::rollback();
+
+            Log::error("[PlayDetail][Edit] Exception: " . $e->getMessage());
+            Log::error(
+                "[PlayDetail][Edit] Callstack:" . $e->getTraceAsString()
+            );
+
+            return response()->json(
+                ["result_code" => -1, "result_message" => "Exception"],
+                500
+            );
+        }
+
+        return response()->json([
+            "result_code" => 0,
+            "result_message" => "success",
+            "id" => $id,
+        ]);
     }
+
+    // DB::beginTransaction();
+    // try {
+    //     DB::table("play_details")
+    //         ->where("id", "=", $memberId)
+    //         ->where("ids", "=", $memberIds)
+    //         ->update([
+    //             "name" => $memberName,
+    //             "email" => DB::raw(
+    //                 "HEX(AES_ENCRYPT('{$memberEmail}', '{$dbEncKey}'))"
+    //             ),
+    //             "sex" => $memberSex,
+    //             "birth_date" => $memberBirthDate,
+    //             "mobile_phone" => DB::raw(
+    //                 "HEX(AES_ENCRYPT('{$memberMobilePhone}', '{$dbEncKey}'))"
+    //             ),
+    //         ]);
+
+    //     DB::commit();
+
+    //     Log::info(
+    //         "[Member][Edit] id: {$memberId}, Ids:{$memberIds}, Name: {$memberName}"
+    //     );
+    // } catch (Exception $e) {
+    //     DB::rollback();
+
+    //     Log::error("[Member][Edit] Exception: " . $e->getMessage());
+    //     Log::error("[Member][Edit] Callstack:" . $e->getTraceAsString());
+
+    //     return response()->json(
+    //         ["result_code" => -1, "result_message" => "Exception"],
+    //         500
+    //     );
+    // }
+
+    // return response()->json([
+    //     "result_code" => 0,
+    //     "result_message" => "success",
+    //     "ids" => $memberIds,
+    // ]);
 }
