# storage/api-docs/api-docs.json
@@ -10,10 +10,10 @@
         "/api/test": {
             "get": {
                 "tags": [
-                    "API 테스트"
+                    "API Get 테스트"
                 ],
-                "summary": "API 테스트",
-                "description": "API 테스트",
+                "summary": "API Get 테스트",
+                "description": "API Get 테스트",
                 "operationId": "3f49eb50f1b2e91cb1fabbaf598b1422",
                 "parameters": [
                     {
@@ -65,6 +65,66 @@
                                         "params": {
                                             "type": "string",
                                             "example": "[1,2,3]"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/testPost": {
+            "post": {
+                "tags": [
+                    "API Post 테스트"
+                ],
+                "summary": "API Post 테스트",
+                "description": "API Post 테스트",
+                "operationId": "a5c35502d1e1827fd69c02f46a85e382",
+                "parameters": [
+                    {
+                        "name": "param",
+                        "in": "query",
+                        "description": "요청값",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "string": {
+                                "summary": "paramter",
+                                "value": "1"
+                            }
+                        }
+                    },
+                    {
+                        "name": "params",
+                        "in": "query",
+                        "description": "요청값들",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "string": {
+                                "summary": "paramters",
+                                "value": "[1,2,3]"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "결과값",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result": {
+                                            "type": "string",
+                                            "example": "success"
                                         }
                                     },
                                     "type": "object"
